modify the `clearfix` mixin to also prevent overflow at the top
and rename the `group` class to `clearfix`

--- a/scss/mixins/layout.scss
+++ b/scss/mixins/layout.scss
@@ -1,6 +1,7 @@
 @mixin clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both; }
+    &:before, &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 }
